--- a/Resources/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.scss
+++ b/Resources/administration/src/module/sw-cms/component/sw-cms-list-item/sw-cms-list-item.scss
@@ -34,5 +34,8 @@
 
     .sw-cms-list-item__title {
         color: $color-kashmir;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
     }
 }
