--- a/Resources/administration/src/module/sw-category/view/sw-category-detail-cms/sw-category-detail-cms.html.twig
+++ b/Resources/administration/src/module/sw-category/view/sw-category-detail-cms/sw-category-detail-cms.html.twig
@@ -1,5 +1,7 @@
 {% block sw_category_detail_cms %}
     <div class="sw-category-detail__cms">
-        <sw-cms-page-form v-if="cmsPage" :page="cmsPage"></sw-cms-page-form>
+        {% block sw_category_detail_cms_form %}
+            <sw-cms-page-form v-if="cmsPage" :page="cmsPage"></sw-cms-page-form>
+        {% endblock %}
     </div>
 {% endblock %}
