--- a/Resources/administration/src/module/sw-order/component/sw-order-document-card/sw-order-document.card.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-document-card/sw-order-document.card.scss
@@ -1,8 +1,13 @@
 @import "~scss/variables";
 
-$sw-label-color-text: $color-gutenberg;
-
 .sw-document-download-button {
-  text-decoration: none;
-  color: $sw-label-color-text;
+    text-decoration: none;
+    color: $color-gutenberg;
+}
+
+.sw-order-document-card {
+
+    .sw-card__content {
+        margin-bottom: 150px; //fix until context menu recognizes bottom of page
+    }
 }
