--- a/Resources/administration/src/module/sw-order/component/sw-order-document-settings-credit-note-modal/sw-order-document-settings-credit-note-modal.scss
+++ b/Resources/administration/src/module/sw-order/component/sw-order-document-settings-credit-note-modal/sw-order-document-settings-credit-note-modal.scss
@@ -1,18 +1,20 @@
+@import "~scss/variables";
 
-.sw-order-document-settings-modal {
-  .sw-order-document-settings-credit-note-modal__highlighted-items {
-    display: grid;
+.sw-order-document-settings-modal__settings-modal {
+    .sw-order-document-settings-credit-note-modal__highlighted-items {
+        display: grid;
 
-    dt {
-      font-weight: inherit;
+        dt {
+            font-weight: inherit;
+        }
+
+        dd {
+            text-align: right;
+        }
     }
 
-    dd {
-      text-align: right;
+    .sw-order-document-settings-credit-note-modal__no-items-text {
+        margin-bottom: 22px;
+        color: $color-crimson;
     }
-  }
-
-  .sw-order-document-settings-credit-note-modal__no-items-text {
-    margin-bottom: 22px;
-  }
 }
