--- a/Resources/administration/src/module/sw-order/component/sw-order-document-settings-invoice-modal/sw-order-document-settings-invoice-modal.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-document-settings-invoice-modal/sw-order-document-settings-invoice-modal.html.twig
@@ -1,3 +1,6 @@
 {% block sw_order_document_settings_modal_form_document_number %}
-    <sw-field type="text" :label="$tc('sw-order.documentModal.labelDocumentNumber')" :value="documentConfig.documentNumber" :v-model="documentConfig.documentNumber"></sw-field>
+    <sw-field type="text"
+              :label="$tc('sw-order.documentModal.labelDocumentNumber')"
+              v-model="documentConfig.documentNumber">
+    </sw-field>
 {% endblock %}
