--- a/Resources/administration/src/module/sw-order/component/sw-order-inline-field/sw-order-inline-field.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-inline-field/sw-order-inline-field.html.twig
@@ -1,12 +1,14 @@
-<div class = "sw-order-inline-field">
+{% block sw_order_document_order_inline_field %}
+    <div class = "sw-order-inline-field">
 
-    <slot v-if="editable">
-        <sw-confirm-field :value="value"
-            @input="onInput">
+        <slot v-if="editable">
+            <sw-confirm-field :value="value"
+                @input="onInput">
 
-        </sw-confirm-field>
-    </slot>
-    <span v-else >
-        {{ displayValue }}
-    </span>
-</div>
+            </sw-confirm-field>
+        </slot>
+        <span v-else >
+            {{ displayValue }}
+        </span>
+    </div>
+{% endblock %}
